@@ -1,15 +1,16 @@
 package net.limit.cubliminal.client.screen.roomcreator;
 
+import com.mojang.datafixers.util.Pair;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
-import net.limit.cubliminal.client.screen.roomcreator.data.ComponentData;
-import net.limit.cubliminal.client.screen.roomcreator.data.FloorData;
-import net.limit.cubliminal.client.screen.roomcreator.data.RoomData;
+import net.limit.cubliminal.client.screen.roomcreator.data.*;
 import net.limit.cubliminal.client.screen.roomcreator.widget.RoomPreviewWidget;
+import net.limit.cubliminal.client.screen.roomcreator.widget.TemplateSuggestorWidget;
 import net.limit.cubliminal.level.Level;
 import net.limit.cubliminal.level.Levels;
 import net.limit.cubliminal.networking.c2s.SaveSelectionC2SPayload;
+import net.limit.cubliminal.world.room.PaddingType;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.Element;
@@ -27,12 +28,9 @@ import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.Util;
-import net.minecraft.util.math.BlockBox;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.Vec3i;
+import net.minecraft.util.math.*;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.function.Function;
 
 @Environment(EnvType.CLIENT)
@@ -47,7 +45,7 @@ public class RoomCreatorScreen extends Screen {
     private static final Function<Integer, Text> STRUCTURE_TOO_TALL = height -> Text.translatable("gui.cubliminal.too_tall_warning", height, height);
 
     private static final Identifier TAB_HEADER_BACKGROUND_TEXTURE = Identifier.ofVanilla("textures/gui/tab_header_background.png");
-    public static final String SAVES_FOLDER_STRUCTURE = "/structure/nbt/";
+    public static final String SAVES_FOLDER_STRUCTURE = "structure/nbt/";
 
     private final Screen parent;
 
@@ -69,7 +67,8 @@ public class RoomCreatorScreen extends Screen {
         this.selectionTab = new SelectionTab();
         this.templatesTab = new TemplatesTab();
         this.roomBuilderTab = new RoomBuilderTab();
-        this.tabNavigation = TabNavigationWidget.builder(this.tabManager, this.width)
+        this.tabNavigation = TabNavigationWidget
+                .builder(this.tabManager, this.width)
                 .tabs(this.selectionTab, this.templatesTab, this.roomBuilderTab)
                 .build();
         this.addDrawableChild(this.tabNavigation);
@@ -95,10 +94,6 @@ public class RoomCreatorScreen extends Screen {
         this.templatesTab.refresh();
     }
 
-    public void updateTemplates() {
-        this.templatesTab.updateTemplates();
-    }
-
     @Override
     protected void refreshWidgetPositions() {
         if (this.tabNavigation != null) {
@@ -118,10 +113,19 @@ public class RoomCreatorScreen extends Screen {
         this.client.setScreen(this.parent);
     }
 
+    private boolean isTemplateSuggestorVisible() {
+        return this.roomBuilderTab != null && this.roomBuilderTab.templateSuggestorWidget != null && this.roomBuilderTab.templateSuggestorWidget.visible;
+    }
+
     @Override
     public void render(DrawContext context, int mouseX, int mouseY, float delta) {
         super.render(context, mouseX, mouseY, delta);
+
         context.drawTexture(RenderLayer::getGuiTextured, Screen.FOOTER_SEPARATOR_TEXTURE, 0, this.height - this.layout.getFooterHeight() - 2, 0.0F, 0.0F, this.width, 2, 32, 2);
+
+        if (this.isTemplateSuggestorVisible()) {
+            this.roomBuilderTab.templateSuggestorWidget.render(context, mouseX, mouseY, delta);
+        }
     }
 
     @Override
@@ -130,34 +134,108 @@ public class RoomCreatorScreen extends Screen {
         this.renderDarkening(context, 0, this.layout.getHeaderHeight(), this.width, this.height);
     }
 
-    private static boolean isStringInputValid(String string) {
-        return string.isEmpty() || string.equals("-") || string.matches("^-?\\d+$");
-    }
-
-    private static boolean isNumValid(String num) {
-        return num.matches("^-?\\d+$");
-    }
-
-    public static Identifier getSaveFolderPath(String name, Level level) {
-        Identifier levelName = level.name;
-        return Identifier.of(
-                levelName.getNamespace(),
-                levelName.getPath() + SAVES_FOLDER_STRUCTURE + name
-        );
-    }
-
     @Override
     public boolean mouseClicked(double mouseX, double mouseY, int button) {
         if (button == 0) {
+            if (this.roomBuilderTab != null) {
+                RoomBuilderTab tab = this.roomBuilderTab;
+                if (tab.templateSuggestorWidget != null) {
+                    if (tab.templateSuggestorWidget.mouseClicked(mouseX, mouseY, button)) {
+                        return true;
+                    }
+                    tab.templateSuggestorWidget.setVisible(tab.templateNameWidget.isMouseOver(mouseX, mouseY));
+                }
+                if (tab.templateListWidget != null && !tab.templateListWidget.isMouseOver(mouseX, mouseY)) {
+                    tab.templateListWidget.clearFocus();
+                }
+            }
+
             for (Element element : this.tabNavigation.children()) {
-                if (element instanceof TabButtonWidget widget && widget.getTab() instanceof TemplatesTab tab && element.mouseClicked(mouseX, mouseY, button)) {
-                    this.updateTemplates();
+                if (element instanceof TabButtonWidget widget && widget.getTab() instanceof TemplatesTab && element.mouseClicked(mouseX, mouseY, button)) {
+                    this.templatesTab.updateTemplates();
                     break;
                 }
             }
         }
 
         return super.mouseClicked(mouseX, mouseY, button);
+    }
+
+    @Override
+    public boolean mouseScrolled(double mouseX, double mouseY, double horizontalAmount, double verticalAmount) {
+        if (this.isTemplateSuggestorVisible()) {
+            if (this.roomBuilderTab.templateSuggestorWidget.mouseScrolled(mouseX, mouseY, horizontalAmount, verticalAmount)) {
+                return true;
+            }
+        }
+        return super.mouseScrolled(mouseX, mouseY, horizontalAmount, verticalAmount);
+    }
+
+    @Override
+    public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
+        if (this.isTemplateSuggestorVisible()) {
+            if (this.roomBuilderTab.templateSuggestorWidget.keyPressed(keyCode, scanCode, modifiers)) {
+                return true;
+            }
+        }
+        return super.keyPressed(keyCode, scanCode, modifiers);
+    }
+
+    // Word 'Input' indicates the check is thought for real time user written input, thus being less strict
+    // than the final check made before applying the input to a field
+    private static boolean isIdentifierInputValid(String identifierAsString) {
+        if (identifierAsString.isEmpty()) return true;
+        String[] namespaceAndPath = identifierAsString.split(":", 2);
+        if (namespaceAndPath.length >= 2) {
+            return namespaceAndPath.length == 2 && Identifier.isNamespaceValid(namespaceAndPath[0]) && Identifier.isPathValid(namespaceAndPath[1]);
+        }
+        return Identifier.isPathValid(identifierAsString);
+    }
+
+    // Checks if the string contains a valid namespace and path
+    private static boolean isIdentifierValid(String identifierAsString) {
+        String[] namespaceAndPath = identifierAsString.split(":", 2);
+        return namespaceAndPath.length == 2 && Identifier.isNamespaceValid(namespaceAndPath[0]) && Identifier.isPathValid(namespaceAndPath[1]);
+    }
+
+    private static boolean isIntegerNumInputValid(String string) {
+        return string.isEmpty() || string.equals("-") || isIntegerNumValid(string);
+    }
+
+    private static boolean isIntegerNumValid(String num) {
+        return num.matches("^-?\\d+$");
+    }
+
+    private static boolean isOptionalNumValid(String num, int min) {
+        return num.isEmpty() || (isIntegerNumValid(num) && parseOrDefault(num, -1) >= min);
+    }
+
+    private static boolean isOptionalPositiveFloatValid(String num) {
+        return num.isEmpty() || (num.matches("^(?=.*\\d)\\d*\\.?\\d*$") && parseFloatOrDefault(num, -1f) >= 0f);
+    }
+
+    private static int parseOrDefault(String text, int fallback) {
+        try {
+            return Integer.parseInt(text);
+        } catch (NumberFormatException e) {
+            return fallback;
+        }
+    }
+
+    private static float parseFloatOrDefault(String text, float fallback) {
+        try {
+            return Float.parseFloat(text);
+        } catch (NumberFormatException e) {
+            return fallback;
+        }
+    }
+
+    public static Identifier getSaveFolderPath(String name, Level level) {
+        Identifier levelName = level.name;
+        return Identifier.of(
+                levelName.getNamespace(),
+                 SAVES_FOLDER_STRUCTURE + levelName.getPath() + "/" + name
+        );
     }
 
     @Environment(EnvType.CLIENT)
@@ -190,12 +268,8 @@ public class RoomCreatorScreen extends Screen {
             adder.add(CyclingButtonWidget.onOffBuilder(false)
                     .build(0, 0, 80, 20, Text.literal("Entities"), (button, value) -> this.includeEntities = value));
 
-            this.nameWidget = new TextFieldWidget(textRenderer, 240, 20, Text.empty()) {
-                @Override
-                public boolean charTyped(char chr, int modifiers) {
-                    return RoomCreatorScreen.this.isValidCharacterForName(this.getText(), chr, this.getCursor()) && super.charTyped(chr, modifiers);
-                }
-            };
+            this.nameWidget = new TextFieldWidget(textRenderer, 240, 20, Text.empty());
+            this.nameWidget.setTextPredicate(Identifier::isPathValid);
             this.nameWidget.setMaxLength(128);
             this.nameWidget.setPlaceholder(Text.translatable("structure_block.structure_name").formatted(Formatting.GRAY));
             adder.add(this.nameWidget, 3);
@@ -205,9 +279,9 @@ public class RoomCreatorScreen extends Screen {
             this.x_1 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
             this.y_1 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
             this.z_1 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
-            this.x_1.setTextPredicate(RoomCreatorScreen::isStringInputValid);
-            this.y_1.setTextPredicate(RoomCreatorScreen::isStringInputValid);
-            this.z_1.setTextPredicate(RoomCreatorScreen::isStringInputValid);
+            this.x_1.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
+            this.y_1.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
+            this.z_1.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
             adder.add(this.x_1);
             adder.add(this.y_1);
             adder.add(this.z_1);
@@ -217,9 +291,9 @@ public class RoomCreatorScreen extends Screen {
             this.x_2 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
             this.y_2 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
             this.z_2 = new TextFieldWidget(textRenderer, 80, 20, Text.empty());
-            this.x_2.setTextPredicate(RoomCreatorScreen::isStringInputValid);
-            this.y_2.setTextPredicate(RoomCreatorScreen::isStringInputValid);
-            this.z_2.setTextPredicate(RoomCreatorScreen::isStringInputValid);
+            this.x_2.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
+            this.y_2.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
+            this.z_2.setTextPredicate(RoomCreatorScreen::isIntegerNumInputValid);
             adder.add(this.x_2);
             adder.add(this.y_2);
             adder.add(this.z_2);
@@ -300,12 +374,12 @@ public class RoomCreatorScreen extends Screen {
             if (DATA_MANAGER.hasAllData()) {
                 BlockPos.Mutable corner1 = DATA_MANAGER.getCorner1().mutableCopy();
                 BlockPos.Mutable corner2 = DATA_MANAGER.getCorner2().mutableCopy();
-                if (isNumValid(this.x_1.getText())) corner1.setX(Integer.parseInt(this.x_1.getText()));
-                if (isNumValid(this.y_1.getText())) corner1.setY(Integer.parseInt(this.y_1.getText()));
-                if (isNumValid(this.z_1.getText())) corner1.setZ(Integer.parseInt(this.z_1.getText()));
-                if (isNumValid(this.x_2.getText())) corner2.setX(Integer.parseInt(this.x_2.getText()));
-                if (isNumValid(this.y_2.getText())) corner2.setY(Integer.parseInt(this.y_2.getText()));
-                if (isNumValid(this.z_2.getText())) corner2.setZ(Integer.parseInt(this.z_2.getText()));
+                if (isIntegerNumValid(this.x_1.getText())) corner1.setX(Integer.parseInt(this.x_1.getText()));
+                if (isIntegerNumValid(this.y_1.getText())) corner1.setY(Integer.parseInt(this.y_1.getText()));
+                if (isIntegerNumValid(this.z_1.getText())) corner1.setZ(Integer.parseInt(this.z_1.getText()));
+                if (isIntegerNumValid(this.x_2.getText())) corner2.setX(Integer.parseInt(this.x_2.getText()));
+                if (isIntegerNumValid(this.y_2.getText())) corner2.setY(Integer.parseInt(this.y_2.getText()));
+                if (isIntegerNumValid(this.z_2.getText())) corner2.setZ(Integer.parseInt(this.z_2.getText()));
                 DATA_MANAGER.setCorner1(corner1.toImmutable());
                 DATA_MANAGER.setCorner2(corner2.toImmutable());
 
@@ -408,7 +482,7 @@ public class RoomCreatorScreen extends Screen {
 
         class TemplateScrollList extends ElementListWidget<TemplateScrollList.Entry> {
 
-            private final List<Identifier> listedTemplates = new ArrayList<>();
+            private final Map<Identifier, Vec3i> listedTemplates = new HashMap<>();
 
             public TemplateScrollList(MinecraftClient client, int width, int height, int y) {
                 super(client, width, height, y, LIST_ITEM_HEIGHT);
@@ -426,19 +500,19 @@ public class RoomCreatorScreen extends Screen {
 
             void init() {
                 this.setScrollAmount(0);
-                this.listedTemplates.forEach(id -> this.addEntry(new Entry(id)));
+                this.listedTemplates.forEach((id, size) -> this.addEntry(new Entry(id, size)));
             }
 
             void updateTemplates() {
                 this.listedTemplates.clear();
-                this.listedTemplates.addAll(DATA_MANAGER.getStructureTemplates());
+                this.listedTemplates.putAll(DATA_MANAGER.getStructureTemplates());
 
                 String filter = TemplatesTab.this.searchPatternWidget.getText();
                 if (!minecraftStructures) {
-                    this.listedTemplates.removeIf(id -> id.getNamespace().equals(Identifier.DEFAULT_NAMESPACE));
+                    this.listedTemplates.keySet().removeIf(id -> id.getNamespace().equals(Identifier.DEFAULT_NAMESPACE));
                 }
                 if (!filter.isBlank()) {
-                    this.listedTemplates.removeIf(id -> !id.toString().contains(filter));
+                    this.listedTemplates.keySet().removeIf(id -> !id.toString().contains(filter));
                 }
 
                 this.clearEntries();
@@ -450,10 +524,11 @@ public class RoomCreatorScreen extends Screen {
                 private final ButtonWidget button;
 
                 private final Identifier templateName;
-                private Vec3i size = null;
+                private Vec3i size;
 
-                public Entry(Identifier templateName) {
+                public Entry(Identifier templateName, Vec3i size) {
                     this.templateName = templateName;
+                    this.size = size;
                     this.button = ButtonWidget.builder(
                                     Util.make(() -> {
                                         String name;
@@ -495,120 +570,306 @@ public class RoomCreatorScreen extends Screen {
     @Environment(EnvType.CLIENT)
     class RoomBuilderTab extends GridScreenTab {
 
-        private static final int COLUMNS = 6;
+        private final RoomBuilder roomBuilder = new RoomBuilder();
+        private FloorBuilder selectedFloor;
+        private ComponentBuilder selectedComponent;
 
-        private final RoomData roomData = new RoomData();
-        private FloorData selectedFloor;
-        private ComponentData selectedComponent;
-        private Level level = Levels.LEVEL_0;
+        private final List<ClickableWidget> roomInfoWidgets = new ArrayList<>();
+        private CyclingButtonWidget<Level> levelWidget;
+        private TextWidget roomSizeText;
+        private TextFieldWidget roomSizeXWidget;
+        private TextFieldWidget roomSizeZWidget;
 
-        private RoomPreviewWidget previewWidget;
-        private TextFieldWidget roomNameWidget;
-        private TextFieldWidget boundsXWidget;
-        private TextFieldWidget boundsYWidget;
-        private TextFieldWidget boundsZWidget;
-        private TextWidget floorLabelWidget;
-
-        private TextFieldWidget componentWidthWidget;
-        private TextFieldWidget componentLengthWidget;
+        private final List<ClickableWidget> floorEditorWidgets = new ArrayList<>();
+        private TextWidget componentSizeText;
+        private TextFieldWidget componentSizeXWidget;
+        private TextFieldWidget componentSizeZWidget;
+        private TextWidget componentPosText;
         private TextFieldWidget componentRelXWidget;
         private TextFieldWidget componentRelZWidget;
-        private TextFieldWidget newTemplateNameWidget;
-        private TextWidget templateListWidget;
+        private ComponentTemplateList templateListWidget;
+        private TextFieldWidget templateNameWidget;
+        private TemplateSuggestorWidget templateSuggestorWidget;
+        private TextWidget doorsHeader2;
+        private CyclingButtonWidget<Direction> doorDirectionWidget;
+        private DoorIndexSlider doorIndexWidget;
+        private ButtonWidget addDoorButton2;
+        private ButtonWidget deleteDoorButton2;
+
+        private TextWidget floorLabelWidget;
+        private ButtonWidget deleteFloorButton;
+        private RoomPreviewWidget previewWidget;
 
         public RoomBuilderTab() {
             super(ROOM_BUILDER_TEXT);
-            this.selectedFloor = this.roomData.addFloor();
+            this.selectedFloor = this.roomBuilder.addFloor();
             this.init();
         }
 
         void init() {
-            GridWidget.Adder adder = this.grid.setRowSpacing(4).setColumnSpacing(5).createAdder(COLUMNS);
+            this.grid.setSpacing(3);
 
-            adder.add(sectionHeader("Room Info"), COLUMNS);
+            this.initRoomInfoSection();
+            this.initComponentSection();
+            this.initRight();
 
-            adder.add(CyclingButtonWidget.builder(Level::getTranslatableName)
-                    .values(Levels.ALL)
-                    .build(0, 0, 90, 20, Text.literal("Level"), (button, value) -> this.level = value));
-
-            this.roomNameWidget = new TextFieldWidget(textRenderer, 140, 20, Text.empty());
-            this.roomNameWidget.setPlaceholder(Text.literal("Room name").formatted(Formatting.GRAY));
-            this.roomNameWidget.setMaxLength(128);
-            adder.add(this.roomNameWidget, 3);
-
-            adder.add(new TextWidget(Text.literal("Bounds:"), textRenderer));
-            this.boundsXWidget = numberField();
-            adder.add(this.boundsXWidget);
-
-            this.boundsYWidget = numberField();
-            this.boundsZWidget = numberField();
-            this.boundsXWidget.setText("16");
-            this.boundsYWidget.setText("8");
-            this.boundsZWidget.setText("16");
-            adder.add(this.boundsYWidget);
-            adder.add(this.boundsZWidget);
-
-            // no doordata model yet, just placeholder
-            adder.add(new TextWidget(Text.literal("Doors:"), textRenderer));
-            ButtonWidget addDoorButton = ButtonWidget.builder(Text.literal("Add Door"), b -> {})
-                    .tooltip(Tooltip.of(Text.literal("Door placement isn't wired up yet").formatted(Formatting.GRAY)))
-                    .size(90, 20).build();
-            addDoorButton.active = false;
-            adder.add(addDoorButton);
-
-            adder.add(sectionHeader("Floor"), COLUMNS);
-
-            this.floorLabelWidget = new TextWidget(this.floorLabelText(), textRenderer);
-            adder.add(this.floorLabelWidget, 2);
-            adder.add(ButtonWidget.builder(Text.literal("<"), b -> this.cycleFloor(-1)).size(20, 20).build());
-            adder.add(ButtonWidget.builder(Text.literal(">"), b -> this.cycleFloor(1)).size(20, 20).build());
-            adder.add(ButtonWidget.builder(Text.literal("Add Floor"), b -> this.addFloor()).size(90, 20).build());
-            adder.add(ButtonWidget.builder(Text.literal("Remove Floor"), b -> this.removeFloor()).size(90, 20).build());
-
-            this.previewWidget = new RoomPreviewWidget(0, 0, 240, 120);
-            this.previewWidget.setSelectionListener(this::onComponentSelected);
-            this.previewWidget.setDragListener(this::syncFieldsFromComponent);
-            adder.add(this.previewWidget, 4);
-            adder.add(blank(), 2);
-
-            adder.add(sectionHeader("Components"), COLUMNS);
-
-            adder.add(ButtonWidget.builder(Text.literal("Add Component"), b -> this.addComponent()).size(100, 20).build(), 2);
-
-            adder.add(new TextWidget(Text.literal("Size X:"), textRenderer));
-            this.componentWidthWidget = numberField();
-            this.componentWidthWidget.setChangedListener(t -> this.applyComponentFields());
-            adder.add(this.componentWidthWidget);
-
-            adder.add(new TextWidget(Text.literal("Size Z:"), textRenderer));
-            this.componentLengthWidget = numberField();
-            this.componentLengthWidget.setChangedListener(t -> this.applyComponentFields());
-            adder.add(this.componentLengthWidget);
-
-            adder.add(new TextWidget(Text.literal("Rel X:"), textRenderer));
-            this.componentRelXWidget = numberField();
-            this.componentRelXWidget.setChangedListener(t -> this.applyComponentFields());
-            adder.add(this.componentRelXWidget);
-
-            adder.add(new TextWidget(Text.literal("Rel Z:"), textRenderer));
-            this.componentRelZWidget = numberField();
-            this.componentRelZWidget.setChangedListener(t -> this.applyComponentFields());
-            adder.add(this.componentRelZWidget);
-
-            this.newTemplateNameWidget = new TextFieldWidget(textRenderer, 120, 20, Text.empty());
-            this.newTemplateNameWidget.setPlaceholder(Text.literal("Template name").formatted(Formatting.GRAY));
-            adder.add(this.newTemplateNameWidget, 2);
-            adder.add(ButtonWidget.builder(Text.literal("Add Template"), b -> this.addTemplateName()).size(90, 20).build());
-
-            this.templateListWidget = new TextWidget(Text.empty(), textRenderer);
-            adder.add(this.templateListWidget, COLUMNS);
-
-            adder.add(ButtonWidget.builder(Text.literal("Delete Component"), b -> this.deleteSelectedComponent()).size(115, 20).build(), 2);
-            adder.add(ButtonWidget.builder(Text.literal("Save as Template"), b -> this.saveAsTemplate()).size(115, 20).build(), 2);
-            adder.add(ButtonWidget.builder(Text.literal("Save Room"), b -> this.saveRoom()).size(115, 20).build(), 2);
-
+            this.setLevel(Levels.ALL[0]);
             this.refreshFloor();
             this.setComponentEditorEnabled(false);
+            this.templateSuggestorWidget.setVisible(false);
+        }
+
+        void initRoomInfoSection() {
+            TextWidget roomInfoHeader = sectionHeader("Room Info");
+            this.grid.add(roomInfoHeader, 1, 1, 1, 2);
+
+            this.levelWidget = CyclingButtonWidget.builder(Level::getTranslatableName)
+                    .values(Levels.ALL)
+                    .build(0, 0, 120, 18, Text.literal("Level"), (b, l) -> this.setLevel(l));
+            this.grid.add(this.levelWidget, 2, 1);
+
+            TextFieldWidget roomNameWidget = new TextFieldWidget(textRenderer, 120, 18, Text.empty());
+            roomNameWidget.setPlaceholder(Text.literal("Room name").formatted(Formatting.GRAY));
+            roomNameWidget.setTextPredicate(RoomCreatorScreen::isIdentifierInputValid);
+            roomNameWidget.setMaxLength(128);
+            this.grid.add(roomNameWidget, 2, 2);
+
+            this.roomSizeText = new TextWidget(Text.literal("Size: (X, Z)"), textRenderer);
+            this.roomSizeText.setHeight(16);
+            this.roomSizeText.alignLeft();
+            this.grid.add(this.roomSizeText, 3, 1);
+
+            this.roomSizeXWidget = smallNumberField(1);
+            this.roomSizeXWidget.setChangedListener(t -> this.refreshFloor());
+            this.roomSizeZWidget = smallNumberField(1);
+            this.roomSizeZWidget.setChangedListener(t -> this.refreshFloor());
+
+            GridWidget sizeBox = new GridWidget().setRowSpacing(0).setColumnSpacing(30);
+            sizeBox.add(this.roomSizeXWidget, 1, 1);
+            sizeBox.add(this.roomSizeZWidget, 1, 2);
+            this.grid.add(sizeBox, 3, 2);
+
+            CyclingButtonWidget<PaddingType> paddingTypeWidget = CyclingButtonWidget
+                    .<PaddingType>builder(type -> Text.translatable(type.translatableEntry()))
+                    .values(PaddingType.values())
+                    .build(0, 0, 120, 18, Text.literal("Padding Type"));
+            this.grid.add(paddingTypeWidget, 4, 1);
+
+            TextFieldWidget paddingCountWidget = new TextFieldWidget(textRenderer, 120, 18, Text.empty());
+            paddingCountWidget.setPlaceholder(Text.literal("Padding Count").formatted(Formatting.GRAY));
+            paddingCountWidget.setTextPredicate(s -> isOptionalNumValid(s, 0));
+            this.grid.add(paddingCountWidget, 4, 2);
+
+            ButtonWidget loadRoomButton = ButtonWidget
+                    .builder(Text.literal("Load"), b -> this.loadRoom())
+                    .size(120, 18).build();
+            this.grid.add(loadRoomButton, 5, 1);
+
+            ButtonWidget saveRoomButton = ButtonWidget
+                    .builder(Text.literal("Save"), b -> this.saveRoom())
+                    .size(120, 18).build();
+            this.grid.add(saveRoomButton, 5, 2);
+
+            Positioner bottomPositioner = this.grid.copyPositioner().alignBottom();
+            TextWidget componentsHeader = sectionHeader("Components");
+            this.grid.add(componentsHeader, 6, 1, 1, 2, bottomPositioner);
+
+            ButtonWidget addComponentButton = ButtonWidget.builder(Text.literal("Add Component"), b -> this.addComponent())
+                    .size(120, 18).build();
+            ButtonWidget deleteComponentButton = ButtonWidget.builder(Text.literal("Delete Component"), b -> this.deleteSelectedComponent())
+                    .size(120, 18).build();
+
+            this.grid.add(addComponentButton, 7, 1);
+            this.grid.add(deleteComponentButton, 7, 2);
+
+            TextWidget doorsHeader = sectionHeader("Doors");
+            this.grid.add(doorsHeader, 8, 1, 1, 2, bottomPositioner);
+
+            ButtonWidget addDoorButton = ButtonWidget.builder(Text.literal("Add Door"), b -> this.addDoor())
+                    .tooltip(Tooltip.of(Text.literal("Door placement coming soon").formatted(Formatting.GRAY)))
+                    .size(120, 18).build();
+            ButtonWidget deleteDoorButton = ButtonWidget.builder(Text.literal("Delete Door"), b -> this.deleteSelectedDoor())
+                    .size(120, 18).build();
+            addDoorButton.active = false;
+            deleteDoorButton.active = false;
+
+            this.grid.add(addDoorButton, 9, 1);
+            this.grid.add(deleteDoorButton, 9, 2);
+
+            this.roomInfoWidgets.addAll(List.of(
+                    roomInfoHeader,
+                    this.levelWidget,
+                    roomNameWidget,
+                    roomSizeText,
+                    this.roomSizeXWidget,
+                    this.roomSizeZWidget,
+                    paddingTypeWidget,
+                    paddingCountWidget,
+                    loadRoomButton,
+                    saveRoomButton,
+                    componentsHeader,
+                    addComponentButton,
+                    deleteComponentButton,
+                    doorsHeader,
+                    addDoorButton,
+                    deleteDoorButton
+            ));
+        }
+
+        void initComponentSection() {
+            TextWidget componentsHeader2 = sectionHeader("Components");
+            this.grid.add(componentsHeader2, 1, 1, 1, 2);
+
+            ButtonWidget addComponentButton2 = ButtonWidget.builder(Text.literal("Add"), b -> this.addComponent())
+                    .size(65, 18).build();
+            ButtonWidget deleteComponentButton2 = ButtonWidget.builder(Text.literal("Delete"), b -> this.deleteSelectedComponent())
+                    .size(65, 18).build();
+
+            this.grid.add(addComponentButton2, 2, 1);
+            this.grid.add(deleteComponentButton2, 2, 2);
+
+            this.componentSizeText = new TextWidget(Text.literal("Size: (X, Z)"), textRenderer);
+            this.componentSizeText.setHeight(16);
+            this.componentSizeText.alignLeft();
+            this.grid.add(this.componentSizeText, 3, 1);
+
+            this.componentSizeXWidget = smallNumberField(1);
+            this.componentSizeXWidget.setChangedListener(t -> this.applyComponentFields(true));
+            this.componentSizeZWidget = smallNumberField(1);
+            this.componentSizeZWidget.setChangedListener(t -> this.applyComponentFields(true));
+
+            GridWidget sizeBox = new GridWidget().setRowSpacing(0).setColumnSpacing(2);
+            sizeBox.add(this.componentSizeXWidget, 1, 1);
+            sizeBox.add(this.componentSizeZWidget, 1, 2);
+            this.grid.add(sizeBox, 3, 2);
+
+            this.componentPosText = new TextWidget(Text.literal("Position: (X, Z)"), textRenderer);
+            this.componentPosText.setHeight(16);
+            this.componentPosText.alignLeft();
+            this.grid.add(this.componentPosText, 4, 1);
+
+            this.componentRelXWidget = smallNumberField(0);
+            this.componentRelXWidget.setChangedListener(t -> this.applyComponentFields(false));
+            this.componentRelZWidget = smallNumberField(0);
+            this.componentRelZWidget.setChangedListener(t -> this.applyComponentFields(false));
+
+            GridWidget posBox = new GridWidget().setRowSpacing(0).setColumnSpacing(2);
+            posBox.add(this.componentRelXWidget, 1, 1);
+            posBox.add(this.componentRelZWidget, 1, 2);
+            this.grid.add(posBox, 4, 2);
+
+            this.templateListWidget = new ComponentTemplateList(client, 187, 38, 40);
+            this.grid.add(this.templateListWidget, 5, 1, 1, 2);
+
+            this.templateNameWidget = new TextFieldWidget(textRenderer, 156, 18, Text.empty());
+            this.templateNameWidget.setTextPredicate(RoomCreatorScreen::isIdentifierInputValid);
+            this.templateNameWidget.setMaxLength(128);
+
+            ButtonWidget addTemplateButton = ButtonWidget.builder(Text.literal("+"), b -> this.addTemplateName())
+                    .size(28, 18).build();
+
+            DirectionalLayoutWidget templateRow = DirectionalLayoutWidget.horizontal().spacing(3);
+            Positioner centered = templateRow.copyPositioner().alignVerticalCenter();
+
+            templateRow.add(this.templateNameWidget, centered);
+            templateRow.add(addTemplateButton, centered);
+            this.grid.add(templateRow, 6, 1, 1, 2);
+
+            Positioner bottomPositioner = this.grid.copyPositioner().alignBottom();
+            this.doorsHeader2 = sectionHeader("Doors");
+            this.grid.add(this.doorsHeader2, 7, 1, 1, 2, bottomPositioner);
+
+            this.doorDirectionWidget = CyclingButtonWidget.<Direction>builder(dir -> Text.literal(dir.toString().toUpperCase()))
+                    .values(Direction.Type.HORIZONTAL.stream().toList())
+                    .omitKeyText()
+                    .build(0, 0, 65, 18, Text.empty(), (b, d) -> this.refreshDoors());
+
+            this.doorIndexWidget = new DoorIndexSlider(0, 0, 65, 18, Text.empty(), 3, 0);
+
+            this.grid.add(this.doorDirectionWidget, 8, 1);
+            this.grid.add(this.doorIndexWidget, 8, 2);
+
+            this.addDoorButton2 = ButtonWidget.builder(Text.literal("Add"), b -> this.addDoor())
+                    .size(65, 18).build();
+            this.deleteDoorButton2 = ButtonWidget.builder(Text.literal("Delete"), b -> this.deleteSelectedDoor())
+                    .size(65, 18).build();
+            this.addDoorButton2.active = false;
+            this.deleteDoorButton2.active = false;
+
+            this.grid.add(this.addDoorButton2, 9, 1);
+            this.grid.add(this.deleteDoorButton2, 9, 2);
+
+            this.templateSuggestorWidget = new TemplateSuggestorWidget(this.templateNameWidget);
+            this.templateNameWidget.setChangedListener(s -> this.templateSuggestorWidget.setTemplateName(s));
+
+            this.floorEditorWidgets.addAll(List.of(
+                    componentsHeader2,
+                    addComponentButton2,
+                    deleteComponentButton2,
+                    this.componentSizeText,
+                    this.componentSizeXWidget,
+                    this.componentSizeZWidget,
+                    this.componentPosText,
+                    this.componentRelXWidget,
+                    this.componentRelZWidget,
+                    this.templateListWidget,
+                    this.templateNameWidget,
+                    addTemplateButton,
+                    this.doorsHeader2,
+                    this.doorDirectionWidget,
+                    this.doorIndexWidget,
+                    this.addDoorButton2,
+                    this.deleteDoorButton2
+            ));
+        }
+
+        void initRight() {
+            this.grid.add(new EmptyWidget(32, 1), 1, 3);
+
+            this.grid.add(sectionHeader("Floor"), 1, 4, 1, 2);
+
+            ButtonWidget addFloorButton = ButtonWidget.builder(Text.literal("Add"), button -> this.addFloor())
+                    .size(55, 18).build();
+            this.deleteFloorButton = ButtonWidget.builder(Text.literal("Delete"), button -> this.removeFloor())
+                    .size(55, 18).build();
+            this.deleteFloorButton.active = false;
+
+            this.grid.add(addFloorButton, 2, 4);
+            this.grid.add(this.deleteFloorButton, 2, 5);
+
+            ButtonWidget decreaseFloorWidget = ButtonWidget.builder(Text.literal("<"), b -> this.cycleFloor(-1))
+                    .size(18, 18).build();
+            ButtonWidget increaseFloorWidget = ButtonWidget.builder(Text.literal(">"), b -> this.cycleFloor(1))
+                    .size(18, 18).build();
+
+            this.floorLabelWidget = new TextWidget(this.floorLabelText(), textRenderer).alignCenter();
+            this.floorLabelWidget.setDimensions(72, 18);
+            this.floorLabelWidget.alignCenter();
+
+            DirectionalLayoutWidget navBox = DirectionalLayoutWidget.horizontal().spacing(4);
+            Positioner centeredPositioner = navBox.copyPositioner().alignHorizontalCenter();
+
+            navBox.add(decreaseFloorWidget, centeredPositioner);
+            navBox.add(this.floorLabelWidget, centeredPositioner);
+            navBox.add(increaseFloorWidget, centeredPositioner);
+            this.grid.add(navBox, 3, 4, 1, 2);
+
+            this.previewWidget = new RoomPreviewWidget(0, 0, 120, 120);
+            this.previewWidget.setSelectionListener(this::onSelectedChange);
+            this.previewWidget.setDragListener(this::syncPosAfterDrag);
+            this.grid.add(this.previewWidget,4, 4, 6, 2);
+        }
+
+        private static TextFieldWidget smallNumberField(int min) {
+            TextFieldWidget field = new TextFieldWidget(MinecraftClient.getInstance().textRenderer, 30, 16, Text.empty());
+            field.setTextPredicate(s -> isOptionalNumValid(s, min));
+            return field;
+        }
+
+        private static void addCellSizeTooltip(ClickableWidget widget, Level level) {
+            widget.setTooltip(Tooltip.of(Text.literal(
+                    "One square unit is " + level.spacing_x + "x" + level.spacing_z + " blocks"
+            ).formatted(Formatting.GRAY)));
         }
 
         private static TextWidget sectionHeader(String text) {
@@ -616,151 +877,330 @@ public class RoomCreatorScreen extends Screen {
                     .alignCenter();
         }
 
-        private static TextWidget blank() {
-            return new TextWidget(Text.empty(), MinecraftClient.getInstance().textRenderer);
-        }
-
-        private static TextFieldWidget numberField() {
-            TextFieldWidget field = new TextFieldWidget(MinecraftClient.getInstance().textRenderer, 50, 20, Text.empty());
-            field.setTextPredicate(RoomCreatorScreen::isStringInputValid);
-            return field;
-        }
-
         private Text floorLabelText() {
-            int index = this.roomData.getFloors().indexOf(this.selectedFloor) + 1;
-            return Text.literal("Floor " + index + " / " + this.roomData.getFloors().size());
+            int index = this.roomBuilder.getFloors().indexOf(this.selectedFloor) + 1;
+            return Text.literal(index + "/" + this.roomBuilder.getFloors().size()).formatted(Formatting.YELLOW);
+        }
+
+        private void refreshDoors() {
+            this.doorIndexWidget.setMaxSliderValue(
+                    this.doorDirectionWidget.getValue().getAxis() == Direction.Axis.X
+                    ? this.roomBuilder.getSizeX()
+                    : this.roomBuilder.getSizeZ()
+            );
         }
 
         private void refreshFloor() {
+            this.roomBuilder.setSizeX(parseOrDefault(this.roomSizeXWidget.getText(), this.roomBuilder.getSizeX()));
+            this.roomBuilder.setSizeZ(parseOrDefault(this.roomSizeZWidget.getText(), this.roomBuilder.getSizeZ()));
+
             this.previewWidget.setFloor(this.selectedFloor);
-            this.previewWidget.setBounds(
-                    parseOrDefault(this.boundsXWidget.getText(), 16),
-                    parseOrDefault(this.boundsZWidget.getText(), 16)
-            );
+            this.previewWidget.setBounds(this.roomBuilder.getSizeX(), this.roomBuilder.getSizeZ());
             this.floorLabelWidget.setMessage(this.floorLabelText());
+
+            this.refreshDoors();
         }
 
         private void cycleFloor(int direction) {
-            List<FloorData> floors = this.roomData.getFloors();
+            List<FloorBuilder> floors = this.roomBuilder.getFloors();
             int index = floors.indexOf(this.selectedFloor);
             index = Math.floorMod(index + direction, floors.size());
             this.selectedFloor = floors.get(index);
-            this.onComponentSelected(null);
+            this.onSelectedChange();
             this.refreshFloor();
         }
 
         private void addFloor() {
-            this.selectedFloor = this.roomData.addFloor();
-            this.onComponentSelected(null);
+            this.selectedFloor = this.roomBuilder.addFloor();
+
+            this.deleteFloorButton.active = true;
+
+            this.onSelectedChange();
             this.refreshFloor();
         }
 
         private void removeFloor() {
-            if (this.roomData.getFloors().size() <= 1) return;
-            this.roomData.removeFloor(this.selectedFloor);
-            this.selectedFloor = this.roomData.getFloors().get(0);
-            this.onComponentSelected(null);
+            if (this.roomBuilder.getFloors().size() <= 1) return;
+            this.roomBuilder.removeFloor(this.selectedFloor);
+            this.selectedFloor = this.roomBuilder.getFloors().getFirst();
+
+            boolean singleFloor = this.roomBuilder.getFloors().size() == 1;
+            this.deleteFloorButton.active = !singleFloor;
+
+            this.onSelectedChange();
             this.refreshFloor();
         }
 
+        private void setLevel(Level level) {
+            addCellSizeTooltip(this.roomSizeText, level);
+            addCellSizeTooltip(this.componentSizeText, level);
+            addCellSizeTooltip(this.componentPosText, level);
+            if (this.selectedComponent != null) {
+                this.templateSuggestorWidget.recalculateTemplateSize(level, this.selectedComponent);
+            }
+            this.refreshDoors();
+        }
+
         private void addComponent() {
-            ComponentData component = this.selectedFloor.addComponent();
+            ComponentBuilder component = this.selectedFloor.addComponent();
             this.previewWidget.select(component);
-            this.onComponentSelected(component);
         }
 
         private void deleteSelectedComponent() {
             if (this.selectedComponent == null) return;
             this.selectedFloor.removeComponent(this.selectedComponent);
-            this.onComponentSelected(null);
+            this.previewWidget.select(null);
         }
 
-        private void onComponentSelected(ComponentData component) {
+        private void onSelectedChange() {
+            ComponentBuilder component = this.previewWidget.getSelectedComponent();
             this.selectedComponent = component;
             this.setComponentEditorEnabled(component != null);
+
+            if (component == null) {
+                this.templateSuggestorWidget.setVisible(false);
+            }
+
             this.syncFieldsFromComponent();
         }
 
-        private void syncFieldsFromComponent() {
-            ComponentData c = this.selectedComponent;
+        private void syncPosAfterDrag() {
+            ComponentBuilder c = this.selectedComponent;
             if (c != null) {
-                this.componentWidthWidget.setText(Integer.toString(c.getWidth()));
-                this.componentLengthWidget.setText(Integer.toString(c.getLength()));
-                this.componentRelXWidget.setText(Integer.toString(c.getRelX()));
-                this.componentRelZWidget.setText(Integer.toString(c.getRelZ()));
-                this.templateListWidget.setMessage(Text.literal(String.join(", ", c.getTemplateNames())));
+                int relX = c.getRelX();
+                int relZ = c.getRelZ();
+                this.componentRelXWidget.setText(Integer.toString(relX));
+                this.componentRelZWidget.setText(Integer.toString(relZ));
             } else {
-                this.componentWidthWidget.setText("");
-                this.componentLengthWidget.setText("");
                 this.componentRelXWidget.setText("");
                 this.componentRelZWidget.setText("");
-                this.templateListWidget.setMessage(Text.empty());
             }
+        }
+
+        private void syncFieldsFromComponent() {
+            ComponentBuilder c = this.selectedComponent;
+            if (c != null) {
+                int sizeX = c.getSizeX();
+                int sizeZ = c.getSizeZ();
+                int relX = c.getRelX();
+                int relZ = c.getRelZ();
+                this.componentSizeXWidget.setText(Integer.toString(sizeX));
+                this.componentSizeZWidget.setText(Integer.toString(sizeZ));
+                this.componentRelXWidget.setText(Integer.toString(relX));
+                this.componentRelZWidget.setText(Integer.toString(relZ));
+                this.templateListWidget.updateTemplates();
+            } else {
+                this.componentSizeXWidget.setText("");
+                this.componentSizeZWidget.setText("");
+                this.componentRelXWidget.setText("");
+                this.componentRelZWidget.setText("");
+                this.templateListWidget.clear();
+            }
+        }
+
+        private void addDoor() {
+
+        }
+
+        private void deleteSelectedDoor() {
+
         }
 
         private void setComponentEditorEnabled(boolean enabled) {
-            this.componentWidthWidget.setEditable(enabled);
-            this.componentLengthWidget.setEditable(enabled);
-            this.componentRelXWidget.setEditable(enabled);
-            this.componentRelZWidget.setEditable(enabled);
-            this.newTemplateNameWidget.setEditable(enabled);
-        }
-
-        private void addTemplateName() {
-            if (this.selectedComponent == null) return;
-            String name = this.newTemplateNameWidget.getText().trim();
-            if (!name.isBlank()) {
-                this.selectedComponent.getTemplateNames().add(name);
-                this.newTemplateNameWidget.setText("");
-                this.syncFieldsFromComponent();
+            for (ClickableWidget widget : this.roomInfoWidgets) {
+                widget.visible = !enabled;
+            }
+            for (ClickableWidget widget : this.floorEditorWidgets) {
+                widget.visible = enabled;
             }
         }
 
-        private void applyComponentFields() {
+        // A template can't be added twice
+        private void addTemplateName() {
             if (this.selectedComponent == null) return;
-            this.selectedComponent.setWidth(Math.max(1, parseOrDefault(this.componentWidthWidget.getText(), this.selectedComponent.getWidth())));
-            this.selectedComponent.setLength(Math.max(1, parseOrDefault(this.componentLengthWidget.getText(), this.selectedComponent.getLength())));
+            String templateName = this.templateNameWidget.getText().trim();
+            if (isIdentifierValid(templateName) && this.selectedComponent.hasNotTemplate(templateName)) {
+                this.selectedComponent.add(templateName);
+                this.templateNameWidget.setText("");
+                this.templateListWidget.updateTemplates();
+            }
+        }
+
+        private void deleteTemplateName(String name) {
+            if (this.selectedComponent == null) return;
+            this.selectedComponent.remove(name);
+        }
+
+        private void applyComponentFields(boolean updateSuggestor) {
+            if (this.selectedComponent == null) return;
+            this.selectedComponent.setSizeX(Math.max(1, parseOrDefault(this.componentSizeXWidget.getText(), this.selectedComponent.getSizeX())));
+            this.selectedComponent.setSizeZ(Math.max(1, parseOrDefault(this.componentSizeZWidget.getText(), this.selectedComponent.getSizeZ())));
             this.selectedComponent.setRelX(Math.max(0, parseOrDefault(this.componentRelXWidget.getText(), this.selectedComponent.getRelX())));
             this.selectedComponent.setRelZ(Math.max(0, parseOrDefault(this.componentRelZWidget.getText(), this.selectedComponent.getRelZ())));
+
+            if (updateSuggestor) {
+                this.templateSuggestorWidget.recalculateTemplateSize(this.levelWidget.getValue(), this.selectedComponent);
+            }
+        }
+
+        private void loadRoom() {
+
         }
 
         private void saveRoom() {
-            this.applyComponentFields();
-            this.roomData.setName(this.roomNameWidget.getText());
-            this.roomData.setBoundingBox(
-                    parseOrDefault(this.boundsXWidget.getText(), 16),
-                    parseOrDefault(this.boundsYWidget.getText(), 8),
-                    parseOrDefault(this.boundsZWidget.getText(), 16)
-            );
 
-            if (this.roomData.getName().isBlank()) return;
-
-            // TODO: give either this.roomData or this.roomData.toJson() to the networking + codec
-            // `this.level` is available here if the payload needs it
         }
 
-        private void saveAsTemplate() {
-            this.applyComponentFields();
-            this.roomData.setName(this.roomNameWidget.getText());
-            this.roomData.setBoundingBox(
-                    parseOrDefault(this.boundsXWidget.getText(), 16),
-                    parseOrDefault(this.boundsYWidget.getText(), 8),
-                    parseOrDefault(this.boundsZWidget.getText(), 16)
-            );
+        class ComponentTemplateList extends ElementListWidget<ComponentTemplateList.TemplateEntry> {
 
-            if (this.roomData.getName().isBlank()) return;
-
-            // TODO: same hand off as saveRoom(), but intended for a reusable room template store
-            // rather than a finalized per level room. give this to whatever endpoint/codec
-            // knows templates from saved rooms
-        }
-
-        private static int parseOrDefault(String text, int fallback) {
-            try {
-                return Integer.parseInt(text);
-            } catch (NumberFormatException e) {
-                return fallback;
+            public ComponentTemplateList(MinecraftClient client, int width, int height, int y) {
+                super(client, width, height, y, 18);
+                this.init();
             }
+
+            @Override
+            public int getRowWidth() {
+                return this.width - 12;
+            }
+
+            @Override
+            protected int getScrollbarX() {
+                return this.getX() + this.width - 6;
+            }
+
+            void init() {
+                this.setScrollAmount(0);
+                this.updateTemplates();
+            }
+
+            void remove(TemplateEntry entry) {
+                this.removeEntryWithoutScrolling(entry);
+            }
+
+            void clear() {
+                this.clearEntries();
+            }
+
+            void clearFocus() {
+                this.setFocused(null);
+                for (TemplateEntry entry : this.children()) {
+                    entry.setFocused(null);
+                    entry.weightWidget.setFocused(false);
+                }
+            }
+
+            void updateTemplates() {
+                this.clear();
+                if (selectedComponent == null) return;
+                selectedComponent.getTemplates().getValues().forEach(
+                        pair -> this.addEntry(
+                                new TemplateEntry(pair.getSecond(), pair.getFirst())
+                        )
+                );
+            }
+
+            class TemplateEntry extends ElementListWidget.Entry<TemplateEntry> {
+
+                private final TextWidget nameWidget;
+                private final TextFieldWidget weightWidget;
+                private final ButtonWidget deleteButton;
+                private final String templateName;
+
+                TemplateEntry(String templateName, float weight) {
+                    int totalWidth = ComponentTemplateList.this.getRowWidth() - 5;
+                    int deleteWidth = 16;
+                    int weightWidth = 28;
+                    int spacing = 3;
+                    int nameWidth = totalWidth - weightWidth - deleteWidth - (spacing * 2);
+
+                    this.nameWidget = new TextWidget(Util.make(() -> {
+                        String[] subStrings = Identifier.of(templateName).getPath().split("/");
+                        return Text.literal(subStrings[subStrings.length - 1]);
+                    }), textRenderer);
+                    this.nameWidget.setTooltip(Tooltip.of(Text.literal(templateName).formatted(Formatting.GRAY)));
+                    this.nameWidget.setDimensions(nameWidth, 16);
+                    this.nameWidget.alignLeft();
+
+                    this.weightWidget = new TextFieldWidget(textRenderer, weightWidth, 16, Text.literal(Float.toString(weight)));
+                    this.weightWidget.setTextPredicate(RoomCreatorScreen::isOptionalPositiveFloatValid);
+                    this.weightWidget.setChangedListener(this::updateWeight);
+
+                    this.deleteButton = ButtonWidget.builder(
+                            Text.literal("x"), b -> this.delete()
+                    ).size(deleteWidth, 16).build();
+
+                    this.templateName = templateName;
+                }
+
+                private void updateWeight(String newValue) {
+                    if (selectedComponent == null) return;
+                    ListIterator<Pair<Float, String>> listIterator = selectedComponent.getTemplates().getValues().listIterator();
+                    while (listIterator.hasNext()) {
+                        Pair<Float, String> pair = listIterator.next();
+                        if (pair.getSecond().equals(this.templateName)) {
+                            listIterator.set(Pair.of(parseFloatOrDefault(newValue, 0.0f), this.templateName));
+                        }
+                    }
+                }
+
+                private void delete() {
+                    if (selectedComponent == null) return;
+                    deleteTemplateName(this.templateName);
+                    remove(this);
+                }
+
+                @Override
+                public List<? extends Selectable> selectableChildren() {
+                    return List.of(this.nameWidget, this.weightWidget, this.deleteButton);
+                }
+
+                @Override
+                public List<? extends Element> children() {
+                    return List.of(this.nameWidget, this.weightWidget, this.deleteButton);
+                }
+
+                @Override
+                public void render(DrawContext context, int index, int y, int x, int entryWidth, int entryHeight, int mouseX, int mouseY, boolean hovered, float tickDelta) {
+                    this.nameWidget.setPosition(x, y);
+                    this.nameWidget.render(context, mouseX, mouseY, tickDelta);
+
+                    int weightX = x + this.nameWidget.getWidth() + 3;
+                    this.weightWidget.setPosition(weightX, y);
+                    this.weightWidget.render(context, mouseX, mouseY, tickDelta);
+
+                    int deleteX = weightX + this.weightWidget.getWidth() + 3;
+                    this.deleteButton.setPosition(deleteX, y);
+                    this.deleteButton.render(context, mouseX, mouseY, tickDelta);
+                }
+            }
+        }
+
+        static class DoorIndexSlider extends SliderWidget {
+            private int maxSliderValue;
+
+            public DoorIndexSlider(int x, int y, int width, int height, Text text, int maxSliderValue, double value) {
+                super(x, y, width, height, text, value);
+                this.maxSliderValue = maxSliderValue;
+                this.updateMessage();
+            }
+
+            public void setMaxSliderValue(int max) {
+                int newValue = MathHelper.clamp(this.getSliderValue(), 0, max);
+                this.maxSliderValue = max;
+                this.value = (double) newValue / this.maxSliderValue;
+            }
+
+            public int getSliderValue() {
+                return Math.round((float) this.value * this.maxSliderValue);
+            }
+
+            @Override
+            protected void updateMessage() {
+                this.setMessage(Text.literal(Integer.toString(this.getSliderValue())));
+            }
+
+            @Override
+            protected void applyValue() {}
         }
     }
 }
